--- a/movie/templates/signup.html
+++ b/movie/templates/signup.html
@@ -15,6 +15,7 @@
 <body>
     <div class="container">
         <h2>Added {{ email }} to mailing list</h2>
+        <a href="{% url 'home' %}">Home</a>
     </div>
 </body>
 </html>
