--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>news</title>
+    <link href="https://cdn.jsdelivr.net/npm/
+    bootstrap@5.1.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" crossorigin="anonymous">
+    <title>News</title>
 
-    <h1>news</h1>
 </head>
 <body>
-    
+    <div class="container">
+        {% for news in newss %}
+            <h2>{{ news.headline }}</h2>
+            <h5>{{ news.date }}</h5>
+            <p> {{ news.body }} </p>
+        {% endfor %}
+    </div>    
 </body>
 </html>
