--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -4,18 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/
-    bootstrap@5.1.1/dist/css/bootstrap.min.css" 
-    rel="stylesheet" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <title>News</title>
 
 </head>
 <body>
     <div class="container">
         {% for news in newss %}
-            <h2>{{ news.headline }}</h2>
-            <h5>{{ news.date }}</h5>
-            <p> {{ news.body }} </p>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div>
+                        <div class="card-body">
+                            <h1 class="card-title">{{ news.headline }}</h1>
+                            <p class="card-text"> {{ news.body }} </p>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    {{ news.date }}
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            
         {% endfor %}
     </div>    
 </body>
