--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -27,10 +27,12 @@
         {% for movie in movies %}
         <div v-for="movie in movies" class="col">
           <div class="card">
-            <img class="card-img-top" src="{{ movie.image.url }}" >
+            <img class="card-img-top" src="{{ movie.image.url }}" height="600em">
             <div class="card-body">
               <h5 class="card-title fw-bold"> {{ movie.title }}</h5>
-              <p class="card-text"> {{ movie.description }}</p>
+              <div style="height: 8rem; padding-bottom: 20px;">
+                <p class="card-text"> {{ movie.description }}</p>
+              </div>
               {% if movie.url %}
                 <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
               {% endif %}
