--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movies App</title>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Movies App</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+
+    <div class="container">
+      <a href="#" class="navbar-brand">Movies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="#">News</a>
+          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="#">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  
     <div class="container">
       <form action="">
         <div class="mb-3">
@@ -34,7 +50,7 @@
                 <p class="card-text"> {{ movie.description }}</p>
               </div>
               {% if movie.url %}
-                <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
+              <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
               {% endif %}
             </div>
           </div>
@@ -52,5 +68,6 @@
         <button type="submit" class="btn btn-primary">Sign Up</button>
       </form>
     </div>
-  </body>
+</body>
+
 </html>
