--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,36 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movies App</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-
-    <div class="container">
-      <a href="#" class="navbar-brand">Movies</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="#">News</a>
-          <a class="nav-link" href="#">Login</a>
-          <a class="nav-link" href="#">Sign Up</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-  
-    <div class="container">
+{% extends 'base.html' %} 
+{% block content %}
       <form action="">
         <div class="mb-3">
           <label class="form-label">Search for Movie:</label>
@@ -38,6 +7,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
+      
       <p>Searching for: {{ searchTerm }}</p>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies %}
@@ -57,17 +27,5 @@
         </div>
         {% endfor %}
       </div>
-      <br />
-      <br />
-      <h2>Join our mailing list:</h2>
-      <form action="{% url 'signup' %}">
-        <div class="mb-3">
-          <label for="email" class="form-label">Enter your email:</label>
-          <input type="email" class="form-control" name="email" />
-        </div>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
-      </form>
-    </div>
-</body>
-
-</html>
+    
+{% endblock content %}
