--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <title>News</title>
-
-</head>
-<body>
-    <div class="container">
+{% extends 'base.html' %} 
+{% block content %}
         {% for news in newss %}
             <div class="card mb-3">
                 <div class="row g-0">
@@ -34,6 +19,4 @@
             
             
         {% endfor %}
-    </div>    
-</body>
-</html>
+{% endblock content %}
