--- a/movie/templates/base.html
+++ b/movie/templates/base.html
@@ -13,14 +13,14 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
 
         <div class="container">
-          <a href="#" class="navbar-brand">Movies</a>
+          <a href="{% url 'home' %}" class="navbar-brand">Movies</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-              <a class="nav-link" href="#">News</a>
+              <a class="nav-link" href="{% url 'news' %}">News</a>
               <a class="nav-link" href="#">Login</a>
               <a class="nav-link" href="#">Sign Up</a>
             </div>
