--- a/accounts/templates/signupaccount.html
+++ b/accounts/templates/signupaccount.html
@@ -5,8 +5,13 @@
         <div>
             <div class="card-body">
                 <h5 class="card-title">Sign Up</h5>
+                {% if error %}
+                    <div class="alert alert-danger mt-3 role=alert">
+                        {{ error }}
+                    </div>
+                {% endif %}
                 <p class="card-text">
-                    <form action="POST">
+                    <form method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary">
