--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -50,7 +50,7 @@
     text-muted mt-4">
     <div class="text-center p-4">
       © Copyright -
-      <a class="text-reset fw-bold text-decoration-none" target="_blank" href="https://twitter.com/greglim81">
+      <a class="text-reset fw-bold text-decoration-none" target="_blank" href="https://www.linkedin.com/in/luis-santamaria-dev/">
         Luis Santamaria
       </a> -
       <a class="text-reset fw-bold text-decoration-none" target="_blank" href="https://twitter.com/danielgarax">
