--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -33,12 +33,12 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="{% url 'news' %}">News</a>
           {% if user.is_authenticated %} <!-- Django automatically provides, via the installed auth app, the user object -->
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'logoutaccount' %}">
               Logout ({{ user.username }})
             </a>
           {% else %}
             <a class="nav-link" href="#">Login</a>
-            <a class="nav-link" href="#">Sign Up</a>
+            <a class="nav-link" href="{% url 'signupaccount' %}">Sign Up</a>
           {% endif %}
         </div>
       </div>
