--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -37,7 +37,7 @@
               Logout ({{ user.username }})
             </a>
           {% else %}
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{% url 'loginaccount' %}">Login</a>
             <a class="nav-link" href="{% url 'signupaccount' %}">Sign Up</a>
           {% endif %}
         </div>
